--- a/src/main/webapp/pages/MyMessages/MyMessages.html
+++ b/src/main/webapp/pages/MyMessages/MyMessages.html
@@ -113,7 +113,7 @@
                                             <wm-grid-column binding="sourceTitle" caption="Title" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                             <wm-grid-column binding="municipalityName" caption="Municipality" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                             <wm-grid-column binding="postedByFullName" caption="Sent By" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                            <wm-grid-column binding="postedAt" caption="Date Sent" type="string" datepattern="yyyy-MM-dd hh:mm a" formatpattern="toDate" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                            <wm-grid-column binding="postedAt" caption="Date Sent" type="string" edit-widget-type="text" show="true" readonly="false">{{row.getProperty('postedAt') | toLocalDateString}}</wm-grid-column>
                                             <wm-grid-column binding="municipalityMessage" caption="Internal" type="string" widget-type="checkbox" edit-widget-type="text" show="true" readonly="false">
                                                 <wm-checkbox scopedatavalue="row['municipalityMessage']" disabled="{{colDef.readonly || !isGridEditMode}}" class="" data-ng-class=""></wm-checkbox>
                                             </wm-grid-column>
@@ -121,19 +121,16 @@
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow18">
-                                    <wm-gridcolumn columnwidth="10" name="gridcolumn31_1">
+                                    <wm-gridcolumn columnwidth="9" name="gridcolumn31_1">
                                         <wm-composite name="compositeSelectedMessage">
-                                            <wm-label class="col-md-3 form-control-static" name="label6" caption="Message" width="auto" margin="unset 2em unset unset" fontweight="bold"></wm-label>
+                                            <wm-label class="col-md-3 form-control-static" name="label6" caption="Message Text" fontweight="bold" padding="unset 0.5em"></wm-label>
                                             <wm-container class="col-md-9" name="container1">
-                                                <wm-textarea name="textareaSelectedMessage" readonly="true" datavalue="bind:Widgets.gridInbox.selecteditem.message"></wm-textarea>
+                                                <wm-textarea name="textareaSelectedMessage" readonly="true" datavalue="bind:Widgets.gridInbox.selecteditem.message" placeholder=""></wm-textarea>
                                             </wm-container>
                                         </wm-composite>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="2" name="gridcolumn32">
-                                        <wm-checkbox caption="Internal" class="col-md-12" name="checkboxInternal" datavalue="bind:Widgets.gridInbox.selecteditem.municipalityMessage" checkedvalue="true" uncheckedvalue="false" accessroles="CodeManager,CodeOfficer,CXAdmin,Inspector,InspectorManager,MunicipalityAdmin,MunicipalityEmployee"></wm-checkbox>
-                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="3" name="gridcolumn28"></wm-gridcolumn>
                                 </wm-gridrow>
-                                <wm-gridrow name="gridrow17"></wm-gridrow>
                             </wm-layoutgrid>
                         </wm-panel>
                     </wm-gridcolumn>
@@ -143,8 +140,12 @@
                         <wm-panel iconclass="wi wi-reply" autoclose="outsideClick" title="Your Reply" name="panelReply" class="panel-primary">
                             <wm-layoutgrid name="layoutgrid7">
                                 <wm-gridrow name="gridrow19">
-                                    <wm-gridcolumn columnwidth="12" name="gridcolumn33">
+                                    <wm-gridcolumn columnwidth="9" name="gridcolumn33">
                                         <wm-label padding="unset 0.5em" name="label9" caption="Type your reply below. The user who tagged you on the Message Received above will automatically be tagged on your reply, and you can tag additional users with the &quot;Tag People&quot; button. Click &quot;Post&quot; when your reply is ready."></wm-label>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="3" name="gridcolumn27_1">
+                                        <wm-checkbox caption="Internal Reply" class="col-md-12" name="checkboxInternal" datavalue="bind:Widgets.gridInbox.selecteditem.municipalityMessage" checkedvalue="true" uncheckedvalue="false" accessroles="CodeManager,CodeOfficer,CXAdmin,Inspector,InspectorManager,MunicipalityAdmin,MunicipalityEmployee"
+                                        disabled="true" show="bind:Widgets.gridInbox.selecteditem.municipalityMessage"></wm-checkbox>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow81" padding="2em unset unset unset">
@@ -152,12 +153,13 @@
                                         <wm-picture class="media-object profile-photo" width="32pt" height="32pt" name="picture3" picturesource="bind:!!Variables.CurrentUserDetails.dataSet.id ? 'services/cx2/Users/'+Variables.CurrentUserDetails.dataSet.id+'/content/photo' : 'resources/images/imagelists/fa-user-170.png'"
                                         shape="circle"></wm-picture>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="7" name="gridcolumn158_1">
+                                    <wm-gridcolumn columnwidth="8" name="gridcolumn158_1">
                                         <wm-text name="textAddMessage" placeholder="Type your reply..." updateon="default" on-keyup="textAddMessageKeyup($event, $scope)"></wm-text>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="4" name="gridcolumn159_1">
-                                        <wm-button class="btn-primary" caption="Post" type="button" name="buttonAddMessage" iconclass="wi wi-send" on-click="buttonAddMessageClick($event, $scope)" disabled="bind:!Widgets.textAddMessage.datavalue" margin="unset 0.5em"></wm-button>
-                                        <wm-button class="btn-secondary" caption="Tag People" type="button" name="buttonTagPeople" iconclass="wi wi-tag" on-click="Widgets.dialogTagPeople.open()" badgevalue="bind:Variables.PeopleList.dataSet.length"></wm-button>
+                                    <wm-gridcolumn columnwidth="3" name="gridcolumn159_1">
+                                        <wm-button class="btn-primary" caption="Post" type="button" name="buttonAddMessage" iconclass="wi wi-send" on-click="buttonAddMessageClick($event, $scope)" disabled="bind:!Widgets.textAddMessage.datavalue" margin="unset unset unset 0.5em"></wm-button>
+                                        <wm-button class="btn-secondary" caption="Tag People" type="button" name="buttonTagPeople" iconclass="wi wi-tag" on-click="Widgets.dialogTagPeople.open()" badgevalue="bind:Variables.PeopleList.dataSet.length"
+                                        margin="unset unset unset 0.5em"></wm-button>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
