--- a/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
+++ b/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
@@ -326,6 +326,56 @@
                                 </wm-layoutgrid>
                             </wm-tabpane>
                             <wm-tabpane name="tabpaneDocuments" title="Documents"></wm-tabpane>
+                            <wm-tabpane name="tabpaneNotes" title="Notes">
+                                <wm-layoutgrid name="layoutgrid16">
+                                    <wm-gridrow name="gridrow58" padding="unset unset 1em unset">
+                                        <wm-gridcolumn columnwidth="12" name="gridcolumn121">
+                                            <wm-label padding="unset 0.5em" name="label28_1" caption="If you would like to communicate with the municipality regarding this form, leave a message below."></wm-label>
+                                        </wm-gridcolumn>
+                                    </wm-gridrow>
+                                    <wm-gridrow name="gridrow59">
+                                        <wm-gridcolumn columnwidth="12" name="gridcolumn123">
+                                            <wm-container name="chatcontent" overflow="auto" class="chatcontent">
+                                                <wm-livelist itemclass="bind:item.users.id ===Variables.CurrentUserDetails.dataSet.id? &quot;clearfix mine&quot; : &quot;clearfix&quot;" template="true" itemsperrow="xs-1 sm-1 md-1 lg-1" class="media-list chat"
+                                                dataset="bind:Variables.FormMessagesData.dataSet" navigation="None" name="livelistFormMessages" nodatamessage="" listclass="list-group">
+                                                    <wm-listtemplate layout="inline" name="listtemplate1">
+                                                        <wm-container class="media-right" name="container4">
+                                                            <wm-picture name="userImage" width="24pt" height="24pt" picturesource="bind:'services/cx2/Users/'+Variables.FormMessagesData.dataSet.data[$i].userId+'/content/photo'" shape="circle" margin="1em unset unset unset"
+                                                            class="userpic profile-photo"></wm-picture>
+                                                        </wm-container>
+                                                        <wm-container class="popover media-body" name="container5">
+                                                            <wm-label name="Content" caption="bind:Variables.FormMessagesData.dataSet.message" class="p media-heading"></wm-label>
+                                                            <wm-anchor margin="unset 0.5em" name="anchorViewTaggedPeople" caption="Tags" class="pull-left" iconclass="wi wi-tag" on-click="anchorViewTaggedPeopleClick($event, $scope, item, currentItemWidgets)"
+                                                            textdecoration="underline" fontsize="8" fontunit="pt"></wm-anchor>
+                                                            <wm-container class="pull-right" name="container5_1">
+                                                                <wm-label name="label4" class="small" caption="by " padding="unset 0.5em unset unset"></wm-label>
+                                                                <wm-label name="Name" class="small" caption="bind:Variables.FormMessagesData.dataSet.data[$i].users.firstName +&quot; &quot;+Variables.FormMessagesData.dataSet.data[$i].users.lastName"></wm-label>
+                                                                <wm-label name="label4" class="small" caption="on" padding="unset 0.5em"></wm-label>
+                                                                <wm-label name="Date" caption="bind:Variables.FormMessagesData.dataSet.data[$i].postedAt | toDate: 'MM/dd/yy'" class="small"></wm-label>
+                                                                <wm-label padding="unset 0.5em" name="label85" caption="at" class="small"></wm-label>
+                                                                <wm-label caption="bind:Variables.FormMessagesData.dataSet.data[$i].postedAt | toDate: 'hh:mm a'" class="small" name="Time"></wm-label>
+                                                            </wm-container>
+                                                        </wm-container>
+                                                    </wm-listtemplate>
+                                                </wm-livelist>
+                                            </wm-container>
+                                        </wm-gridcolumn>
+                                    </wm-gridrow>
+                                    <wm-gridrow name="gridrow81" padding="2em unset 1em unset">
+                                        <wm-gridcolumn columnwidth="1" name="gridcolumn157_2" horizontalalign="center">
+                                            <wm-picture class="media-object profile-photo" width="32pt" height="32pt" name="picture3" picturesource="bind:!!Variables.CurrentUserDetails.dataSet.id ? 'services/cx2/Users/'+Variables.CurrentUserDetails.dataSet.id+'/content/photo' : 'resources/images/imagelists/fa-user-170.png'"
+                                            shape="circle"></wm-picture>
+                                        </wm-gridcolumn>
+                                        <wm-gridcolumn columnwidth="8" name="gridcolumn158_1">
+                                            <wm-text name="textAddMessage" placeholder="Type a message..." updateon="default" on-keyup="textAddMessageKeyup($event, $scope)"></wm-text>
+                                        </wm-gridcolumn>
+                                        <wm-gridcolumn columnwidth="3" name="gridcolumn159_1">
+                                            <wm-button class="btn-primary" caption="Post" type="button" margin="unset 0.5em" name="buttonAddMessage" iconclass="wi wi-send" on-click="buttonAddMessageClick($event, $scope)" disabled="bind:!Widgets.textAddMessage.datavalue"></wm-button>
+                                            <wm-button class="btn-secondary" caption="Tag People" type="button" name="buttonTagPeople" iconclass="wi wi-tag" on-click="Widgets.dialogTagPeople.open()" badgevalue="bind:Variables.PeopleList.dataSet.length"></wm-button>
+                                        </wm-gridcolumn>
+                                    </wm-gridrow>
+                                </wm-layoutgrid>
+                            </wm-tabpane>
                         </wm-tabs>
                     </wm-gridcolumn>
                 </wm-gridrow>
@@ -354,5 +404,92 @@
         <wm-pagedialog name="pagedialogViewForm" class="modal-larger" content="_viewForm" modal="true" title="View Form" oktext="Close" iconclass="wi wi-assignment">
             <wm-param name="FormGUID" value="bind:Variables.stvFormLink.dataSet.dataValue" type="string"></wm-param>
         </wm-pagedialog>
+    </wm-view>
+    <wm-view class="dialog-view" name="viewShowTaggedPeople" viewgroup="default">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Tagged" iconclass="wi wi-tag" name="dialogShowTaggedPeople">
+            <wm-dialogactions name="dialogactions7">
+                <wm-button class="btn-secondary" caption="Close" on-click="closeDialog()" name="button18" iconclass="wi wi-cancel"></wm-button>
+            </wm-dialogactions>
+            <wm-livelist listclass="list-group" itemclass="list-group-item" template="true" class="media-list" dataset="bind:Variables.GetTaggedPeopleListByMessage.dataSet" navigation="Scroll" name="livelistTaggedPeopleForMessage" nodatamessage="No people have been tagged on this message."
+            orderby="id:desc">
+                <wm-listtemplate layout="media" name="listtemplate1">
+                    <wm-layoutgrid name="layoutgrid5">
+                        <wm-gridrow name="gridrow17_1">
+                            <wm-gridcolumn columnwidth="2" name="gridcolumn174">
+                                <wm-picture name="picture4" picturesource="bind:!!Variables.GetTaggedPeopleListByMessage.dataSet.data[$i].users.id? 'services/cx2/Users/'+Variables.GetTaggedPeopleListByMessage.dataSet.data[$i].users.id+'/content/photo' : 'resources/images/imagelists/fa-user-170.png'"
+                                width="50pt" height="50pt" class="profile-photo"></wm-picture>
+                            </wm-gridcolumn>
+                            <wm-gridcolumn columnwidth="10" name="gridcolumn25_1">
+                                <wm-label padding="unset 0.5em .5em 0.5em" name="label11" caption="bind:Variables.GetTaggedPeopleListByMessage.dataSet.data[$i].users.firstName+' '+Variables.GetTaggedPeopleListByMessage.dataSet.data[$i].users.lastName" width="100%"
+                                fontweight="bold"></wm-label>
+                                <wm-label padding="unset 0.5em" name="label12" caption="bind:Variables.GetTaggedPeopleListByMessage.dataSet.data[$i].users.email" width="100%"></wm-label>
+                            </wm-gridcolumn>
+                        </wm-gridrow>
+                    </wm-layoutgrid>
+                </wm-listtemplate>
+            </wm-livelist>
+        </wm-dialog>
+    </wm-view>
+    <wm-view class="dialog-view" name="viewTagPeople">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Tag People" iconclass="wi wi-tag" name="dialogTagPeople" width="70%">
+            <wm-layoutgrid name="layoutgrid4">
+                <wm-gridrow name="gridrow20" padding="unset unset 3em unset">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn31_3">
+                        <wm-label padding="unset 0.5em unset unset" name="Instructions" caption="You may tag as many people as you like by searching for them then clicking the “+Add Tag” button. Tagging somebody will send them a notification that they have been tagged on your message."
+                        horizontalalign="center" textalign="left"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow13" padding="unset unset 2em unset">
+                    <wm-gridcolumn columnwidth="2" name="gridcolumn28_1"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="7" name="gridcolumn18_1">
+                        <wm-composite name="composite7" show="true">
+                            <wm-label class="col-md-3 form-control-static" caption="Employee Search" width="30%" fontweight="bold" name="label100"></wm-label>
+                            <wm-container class="col-md-9" width="70%" name="container14">
+                                <wm-search placeholder="Search by Name or Email Address" dataset="bind:Variables.svGetMunicipalityEmployees.dataSet" displaylabel="bind:$[data[$i].fullName]+' ('+$[data[$i].email]+')'" datafield="All Fields" on-submit="textSearchMunicipalitiesSubmit($event, $scope)"
+                                required="true" width="100%" name="textSearchInternalPeople" type="search" displayimagesrc="bind:'services/cx2/Users/'+$[data[$i].id]+'/content/photo'"></wm-search>
+                            </wm-container>
+                        </wm-composite>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="3" name="gridcolumn24" horizontalalign="left">
+                        <wm-button class="btn-primary" caption="Add Tag" type="button" margin="unset 0.5em" name="ButtonTagPeople" iconclass="wi wi-plus" on-click="ButtonTagPeopleClick($event, $scope)" horizontalalign="left" disabled="bind:((Widgets.textSearchPeople.datavalue==&quot;&quot;))&amp;&amp;((Widgets.textSearchInternalPeople.datavalue==&quot;&quot;))"></wm-button>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow14" padding="unset unset 2em unset">
+                    <wm-gridcolumn columnwidth="2" name="gridcolumn31"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="7" name="gridcolumn20_1">
+                        <wm-panel iconclass="wi wi-tag" name="panel1" title="Tagged">
+                            <wm-livelist listclass="list-group" itemclass="list-group-item" template="true" class="media-list" dataset="bind:Variables.PeopleList.dataSet" navigation="Scroll" name="livelistTaggedPeople" nodatamessage="No people have been selected.">
+                                <wm-listtemplate layout="media" name="listtemplate1">
+                                    <wm-layoutgrid name="layoutgrid5">
+                                        <wm-gridrow name="gridrow17_1">
+                                            <wm-gridcolumn columnwidth="2" name="gridcolumn174">
+                                                <wm-picture name="picture4" picturesource="bind:'services/cx2/Users/'+Variables.PeopleList.dataSet[$i].id+'/content/photo'" width="50pt" height="50pt" class="profile-photo"></wm-picture>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="7" name="gridcolumn25_1">
+                                                <wm-label padding="unset 0.5em .5em 0.5em" name="label11" caption="bind:Variables.PeopleList.dataSet[$i].firstName+&quot; &quot;+Variables.PeopleList.dataSet[$i].lastName" width="100%" fontweight="bold"></wm-label>
+                                                <wm-label padding="unset 0.5em" name="label12" caption="bind:Variables.PeopleList.dataSet[$i].email" width="100%"></wm-label>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="3" name="gridcolumn29">
+                                                <wm-button class="btn-primary" caption="Remove" type="button" name="buttonRemove" iconclass="wi wi-trash" on-click="buttonRemoveClick($event, $scope, item, currentItemWidgets)"></wm-button>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                    </wm-layoutgrid>
+                                </wm-listtemplate>
+                            </wm-livelist>
+                        </wm-panel>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="3" name="gridcolumn30"></wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow15_1"></wm-gridrow>
+                <wm-gridrow name="gridrow81_2">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn153_1">
+                        <wm-label name="label84_1" caption="When you are done tagging people, click the &quot;Close&quot; button to return to the form, then click &quot;Post&quot; to submit your message."></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+            </wm-layoutgrid>
+            <wm-dialogactions name="dialogactions6">
+                <wm-button class="btn-secondary" caption="Close" on-click="closeDialog()" name="button14" iconclass="wi wi-cancel"></wm-button>
+            </wm-dialogactions>
+        </wm-dialog>
     </wm-view>
 </wm-page>
