--- a/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
+++ b/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
@@ -330,7 +330,7 @@
                                 <wm-layoutgrid name="layoutgrid16">
                                     <wm-gridrow name="gridrow58" padding="unset unset 1em unset">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn121">
-                                            <wm-label padding="unset 0.5em" name="label28_1" caption="If you would like to communicate with the municipality regarding this form, leave a message below."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label28_1" caption="Notes on  this parcel"></wm-label>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow59">
