- removed "Reporting" section from Form Status Settings per #1439 - removed "Code" text from datagrids - made "Code" field into richtext - updated DB to accommodate maximum characters for Code text Files modified - [EditForm,CXCodeList,MunicipalityCodeList,cx2,pom.xml]

--- a/src/main/webapp/pages/CXCodeList/CXCodeList.html
+++ b/src/main/webapp/pages/CXCodeList/CXCodeList.html
@@ -21,7 +21,6 @@
                             <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.lvCodeListData.dataSet" navigation="Classic" name="gridCodeList" filtermode="multicolumn" exportformat="EXCEL" showrecordcount="true">
                                 <wm-grid-column binding="codeNumber" caption="Code Number" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                 <wm-grid-column binding="codeTitle" caption="Code Title" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                <wm-grid-column binding="code" caption="Code" type="text" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                 <wm-grid-column binding="activeYn" caption="Active" type="boolean" widget-type="checkbox" generator="assigned" edit-widget-type="checkbox" show="true" readonly="false">
                                     <wm-checkbox scopedatavalue="row['activeYn']" disabled="{{colDef.readonly || !isGridEditMode}}" class="" data-ng-class=""></wm-checkbox>
                                 </wm-grid-column>
@@ -34,38 +33,37 @@
                                 <wm-layoutgrid columns="1" name="layoutgrid2">
                                     <wm-gridrow name="gridrow8">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn8">
-                                            <wm-form-field name="codeSets" displayname="Code Set" required="false" show="true" generator="assigned" primary-key="false" key="codeSets" type="list" is-related="true" pc-display="true" mobile-display="true" widget="select"
-                                            dataset="bind:Variables.lvCurrentCodeSetObj.dataSet" datafield="All Fields" displayfield="codeSetTitle" defaultvalue="bind:Variables.lvCurrentCodeSetObj.firstRecord" disabled="true"></wm-form-field>
+                                            <wm-form-field name="codeSets" displayname="Code Set" show="true" primary-key="false" generator="assigned" key="codeSets" type="list" is-related="true" readonly="false" required="false" widget="select" dataset="bind:Variables.lvCurrentCodeSetObj.dataSet"
+                                            datafield="All Fields" displayfield="codeSetTitle" defaultvalue="bind:Variables.lvCurrentCodeSetObj.firstRecord" disabled="true" placeholder="Select value"></wm-form-field>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow4">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn4">
-                                            <wm-form-field name="codeNumber" displayname="Code Number" required="true" show="true" generator="assigned" primary-key="false" key="codeNumber" type="string" is-related="false" maxchars="255" pc-display="true"
-                                            mobile-display="true" widget="text"></wm-form-field>
+                                            <wm-form-field name="codeNumber" displayname="Code Number" show="true" primary-key="false" generator="assigned" key="codeNumber" type="string" readonly="false" required="true" widget="text" maxchars="255" inputtype="text"
+                                            placeholder="Enter value"></wm-form-field>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow5">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn5">
-                                            <wm-form-field name="codeTitle" displayname="Code Title" required="true" show="true" generator="assigned" primary-key="false" key="codeTitle" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
-                                            widget="text"></wm-form-field>
+                                            <wm-form-field name="codeTitle" displayname="Code Title" show="true" primary-key="false" generator="assigned" key="codeTitle" type="string" readonly="false" required="true" widget="text" maxchars="255" inputtype="text"
+                                            placeholder="Enter value"></wm-form-field>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow6">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn6">
-                                            <wm-form-field name="code" displayname="Code" required="true" show="true" generator="assigned" primary-key="false" key="code" type="text" is-related="false" maxchars="5000" pc-display="true" mobile-display="true"
-                                            widget="textarea"></wm-form-field>
+                                            <wm-form-field name="code" displayname="Code" show="true" primary-key="false" generator="assigned" key="code" type="text" readonly="false" required="true" widget="richtext" maxchars="5000" placeholder="Enter value"></wm-form-field>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow7">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn7">
-                                            <wm-form-field name="activeYn" displayname="Active" required="false" show="true" generator="assigned" primary-key="false" key="activeYn" type="boolean" is-related="false" defaultvalue="true" pc-display="true" mobile-display="true"
-                                            widget="checkbox"></wm-form-field>
+                                            <wm-form-field name="activeYn" displayname="Active" show="true" primary-key="false" generator="assigned" key="activeYn" type="boolean" readonly="false" required="false" widget="checkbox" defaultvalue="true" placeholder=""></wm-form-field>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                 </wm-layoutgrid>
-                                <wm-form-field name="codeId" displayname="Code Id" required="true" show="false" generator="identity" primary-key="true" key="codeId" type="integer" is-related="false" step="0" pc-display="true" mobile-display="true" widget="number"></wm-form-field>
-                                <wm-form-action key="save" class="form-save btn-primary" iconclass="wi wi-save" display-name="Save" show="true" type="submit" update-mode="true"></wm-form-action>
-                                <wm-form-action key="cancel" class="form-cancel btn-secondary" iconclass="wi wi-cancel" action="cancel()" display-name="Cancel" show="true" type="button" update-mode="true"></wm-form-action>
+                                <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="true" required="true" step="0" widget="number"></wm-form-field>
+                                <wm-form-field name="codeId" displayname="Code Id" required="true" show="false" generator="identity" primary-key="true" key="codeId" type="integer" step="0" widget="number" inputtype="number" placeholder="Enter value"></wm-form-field>
+                                <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-primary" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
+                                <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action>
                             </wm-liveform>
                         </wm-livegrid>
                     </wm-gridcolumn>
