--- a/src/main/webapp/pages/NewForm/NewForm.html
+++ b/src/main/webapp/pages/NewForm/NewForm.html
@@ -297,8 +297,8 @@
                                             </wm-gridcolumn>
                                             <wm-gridcolumn name="gridcolumn1" columnwidth="6">
                                                 <wm-label padding="unset 0.5em" name="label17" caption="Location" required="bind:Widgets.checkboxOtherOwner.datavalue"></wm-label>
-                                                <wm-select name="gisRecordSelect" displayname="Location" show="true" primary-key="false" generator="assigned" is-related="true" required="bind:Widgets.checkboxOtherOwner.datavalue" dataset="bind:Variables.stvGisData.dataSet" datafield="ID" disabled="false"
-                                                displayfield="FullAddress" width="75%" datavalue="bind:Variables.stvGisData.dataSet[0].ID" readonly="false" on-change="gisRecordSelectChange($event, $scope, newVal, oldVal)"></wm-select>
+                                                <wm-select name="gisRecordSelect" displayname="Location" show="true" primary-key="false" generator="assigned" is-related="true" required="bind:Widgets.checkboxOtherOwner.datavalue" dataset="bind:Variables.stvGisData.dataSet" datafield="id" disabled="false"
+                                                displayfield="fullAddress" width="75%" datavalue="bind:Variables.stvGisData.dataSet[0].id" readonly="false" on-change="gisRecordSelectChange($event, $scope, newVal, oldVal)"></wm-select>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow1">
