Subdivision types Files modified - [ManageGISData]

--- a/src/main/webapp/pages/ManageGISData/ManageGISData.html
+++ b/src/main/webapp/pages/ManageGISData/ManageGISData.html
@@ -56,15 +56,19 @@
                                                     searchkey="subdivision" displaylabel="subdivision" dataset="bind:Variables.Cx2SubdivisionsData.dataSet" datafield="All Fields"></wm-form-field>
                                                 </wm-gridcolumn>
                                                 <wm-gridcolumn columnwidth="4" name="gridcolumn34">
-                                                    <wm-form-field name="section" displayname="Section" show="true" primary-key="false" generator="assigned" key="section" type="string" readonly="false" required="false" widget="text" maxchars="255" inputtype="text"
-                                                    placeholder="Enter value"></wm-form-field>
+                                                    <wm-label padding="unset 0.5em" name="label9" class="control-label col-xs-12" caption="Subdivision Type"></wm-label>
+                                                    <wm-label padding="unset 0.5em" name="label10" fontweight="bold" caption="bind:Widgets.liveform3.formWidgets.subdivisions.datavalue.subdivisionType"></wm-label>
                                                 </wm-gridcolumn>
                                             </wm-gridrow>
                                             <wm-gridrow name="gridrow20" padding="unset unset 4em unset">
                                                 <wm-gridcolumn columnwidth="4" name="gridcolumn35">
+                                                    <wm-form-field name="section" displayname="Section" show="true" primary-key="false" generator="assigned" key="section" type="string" readonly="false" required="false" widget="text" maxchars="255" inputtype="text"
+                                                    placeholder="Enter value"></wm-form-field>
+                                                </wm-gridcolumn>
+                                                <wm-gridcolumn columnwidth="4" name="gridcolumn70">
                                                     <wm-form-field name="lot" displayname="Lot" show="true" primary-key="false" generator="assigned" key="lot" type="string" readonly="false" required="false" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                                 </wm-gridcolumn>
-                                                <wm-gridcolumn columnwidth="8" name="gridcolumn70">
+                                                <wm-gridcolumn columnwidth="4" name="gridcolumn65_1">
                                                     <wm-form-field name="rentalProperty" displayname="Rental Property" show="true" primary-key="false" generator="assigned" key="rentalProperty" type="boolean" readonly="false" required="true" widget="checkbox"
                                                     defaultvalue="false"></wm-form-field>
                                                 </wm-gridcolumn>
